--- a/src/index.css
+++ b/src/index.css
@@ -25,11 +25,12 @@
 }
 
 html,
-body,
-#root {
+body {
+  margin: 0;
+  padding: 0;
+  background-color: rgb(242, 243, 240);
   width: 100%;
   height: 100%;
-  overflow: hidden;
 }
 
 body {
@@ -37,9 +38,14 @@ body {
   font-size: 14px;
   line-height: 1.5;
   color: var(--color-text);
-  background-color: var(--color-bg);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow: hidden;
+}
+
+#root {
+  width: 100%;
+  height: 100%;
 }
 
 button {
